# proxyufo

./: Cargo.toml  README.md  proxies.txt
preset/: http.txt  old.txt
proxyufo/: Cargo.toml
proxyufo/preset/: http.txt
proxyufo/src/: main.rs
src/: checker.rs  main.rs  proxy.rs  scraper.rs
