[package]
name = "proxyufo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3.30" # for our async / await blocks
tokio = { version = "1.36.0", features = ["full"] } # for our async runtime
ratatui = "0.26.1"
crossterm = "0.27.0"
owo-colors = "4.0.0"
