[package]
name = "proxyufo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.27", features = ["blocking"] } # reqwest with JSON parsing support
futures = "0.3.30" # for our async / await blocks
tokio = { version = "1.36.0", features = ["full"] } # for our async runtime
crossterm = "0.27.0"
threadpool = "1.8.1"
